syntax = "proto3";

package user;
option go_package = "github.com/louai60/e-commerce_project/backend/user-service/proto";

service UserService {
    // User CRUD operations
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteResponse);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
    
    // Authentication
    rpc Login (LoginRequest) returns (LoginResponse);
    
    // Address operations
    rpc AddAddress(AddAddressRequest) returns (AddressResponse);
    rpc GetAddresses(GetAddressesRequest) returns (AddressListResponse);
    rpc UpdateAddress(UpdateAddressRequest) returns (AddressResponse);
    rpc DeleteAddress(DeleteAddressRequest) returns (DeleteResponse);
    
    // Payment method operations
    rpc AddPaymentMethod(AddPaymentMethodRequest) returns (PaymentMethodResponse);
    rpc UpdatePaymentMethod(UpdatePaymentMethodRequest) returns (PaymentMethodResponse);
    rpc DeletePaymentMethod(DeletePaymentMethodRequest) returns (DeleteResponse);
    
    // System
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}


// User related messages
message User {
    int64 user_id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    string phone_number = 6;
    string user_type = 7;
    string role = 8;
    string account_status = 9;
    bool email_verified = 10;
    bool phone_verified = 11;
    string created_at = 12;
    string updated_at = 13;
    string last_login = 14;
}

message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string phone_number = 6;
    string user_type = 7;
    string role = 8;
}

message UserResponse {
    User user = 1;
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message ListUsersRequest {
    int32 page = 1;
    int32 limit = 2;
    string filter = 3;  // Added filter capability
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message UpdateUserRequest {
    int64 user_id = 1;
    optional string email = 2;  // Using optional for partial updates
    optional string username = 3;
    optional string first_name = 4;
    optional string last_name = 5;
    optional string role = 6;
    optional string phone_number = 7;
}

message DeleteResponse {
    bool success = 1;
}

message DeleteUserRequest {
    int64 user_id = 1;
}


// Address related messages
message Address {
    string address_id = 1;
    string user_id = 2;
    string address_type = 3;
    string street_address1 = 4;
    optional string street_address2 = 5;
    string city = 6;
    string state = 7;
    string postal_code = 8;
    string country = 9;
    bool is_default = 10;
}

message AddAddressRequest {
    string user_id = 1;
    string address_type = 2;
    string street_address1 = 3;
    optional string street_address2 = 4;
    string city = 5;
    string state = 6;
    string postal_code = 7;
    string country = 8;
    bool is_default = 9;
}

message AddressResponse {
    Address address = 1;
}

message GetAddressesRequest {
    string user_id = 1;
}

message AddressListResponse {
    repeated Address addresses = 1;
}

message UpdateAddressRequest {
    string address_id = 1;
    string user_id = 2;
    optional string address_type = 3;
    optional string street_address1 = 4;
    optional string street_address2 = 5;
    optional string city = 6;
    optional string state = 7;
    optional string postal_code = 8;
    optional string country = 9;
    optional bool is_default = 10;
}

message DeleteAddressRequest {
    string address_id = 1;
    string user_id = 2;
}

// Payment method related messages
message PaymentMethod {
    string payment_method_id = 1;
    string user_id = 2;
    string payment_type = 3;
    string card_last_four = 4;
    string card_brand = 5;
    int32 expiration_month = 6;
    int32 expiration_year = 7;
    bool is_default = 8;
    optional string billing_address_id = 9;
    string token = 10;
}

message AddPaymentMethodRequest {
    string user_id = 1;
    string payment_type = 2;
    string card_last_four = 3;
    string card_brand = 4;
    int32 expiration_month = 5;
    int32 expiration_year = 6;
    bool is_default = 7;
    string token = 8;
    optional string billing_address_id = 9;
}

message PaymentMethodResponse {
    PaymentMethod payment_method = 1;
}

message UpdatePaymentMethodRequest {
    string payment_method_id = 1;
    string user_id = 2;
    optional string payment_type = 3;
    optional string card_last_four = 4;
    optional string card_brand = 5;
    optional int32 expiration_month = 6;
    optional int32 expiration_year = 7;
    optional bool is_default = 8;
    optional string billing_address_id = 9;
    optional string token = 10;
}

message DeletePaymentMethodRequest {
    string payment_method_id = 1;
    string user_id = 2;
}

// Authentication messages
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refresh_token = 2;
    User user = 3;
}

// System messages
message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
}